--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introductie HTML</title>
 </head>
+<p>1. Document  structure
+</p>
 <body>
     
 </body>
