--- a/01-structure.html
+++ b/01-structure.html
@@ -4,9 +4,8 @@
         <!-- this contains meta information -->
         <title>This is the page title</title>
     </head>
-    <p>Hello Rene</p>
 <body>
-<!-- This section contains the content-->
-<!-- Most of your HTML goes here-->
+<!-- this section contains the content-->
+<!-- Most of your HTML goes here -->
 </body>
 </html>
